--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/notasactas/rptActaAdjudicacionBean2018.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/notasactas/rptActaAdjudicacionBean2018.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptActaAdjudicacion" pageWidth="612" pageHeight="792" columnWidth="510" leftMargin="51" rightMargin="51" topMargin="39" bottomMargin="39" uuid="244b56df-7b1c-4fca-9e9d-dde2f9b172eb">
 	<property name="ireport.zoom" value="1.9965000000000006"/>
-	<property name="ireport.x" value="344"/>
-	<property name="ireport.y" value="621"/>
+	<property name="ireport.x" value="483"/>
+	<property name="ireport.y" value="767"/>
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<import value="net.sf.jasperreports.engine.*"/>
@@ -204,6 +204,13 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha ").concat($F{f
 "\nPresidente(a) del Organismo de"+
 "\nAdministración Escolar del Centro Educativo"]]></textFieldExpression>
 				</textField>
+				<staticText>
+					<reportElement uuid="8e37bd84-3b2d-4f23-8a63-b84c3d8d4fcb" x="277" y="160" width="201" height="13"/>
+					<textElement>
+						<font fontName="Arial" size="8"/>
+					</textElement>
+					<text><![CDATA[Encargado(a) de Compra del organismo]]></text>
+				</staticText>
 			</band>
 		</groupFooter>
 	</group>
