--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptPagoProvee.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptPagoProvee.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="d04cfec0-fdb6-4498-beab-2c61f3e21ca5">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="599"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<style name="table">
 		<box>
@@ -101,7 +101,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" size="10"/>
 				</textElement>
-				<textFieldExpression><![CDATA["DIRECCION DEPARTAMENTAL DE "+$P{pNombreDepartamento}+
+				<textFieldExpression><![CDATA["DIRECCIÓN DEPARTAMENTAL DE "+$P{pNombreDepartamento}+
 "\nREPORTE DE PAGO A PROVEEDORES "+$P{pAnho}+
 "\nPOR CENTRO EDUCATIVO"]]></textFieldExpression>
 			</textField>
