--- a/paquescolar-web/src/main/webapp/resources/template/topbar.xhtml
+++ b/paquescolar-web/src/main/webapp/resources/template/topbar.xhtml
@@ -9,7 +9,7 @@
     <div class="topbar">
         <div class="pageColumnLeft">
             <h:link styleClass="topbar-logo">
-                <p:graphicImage name="logo_mined.png" style="border: 0px;" library="images" />
+                <p:graphicImage name="logo_mined_rpt.png" style="border: 0px;" library="images" />
             </h:link>
 
             <a href="#" id="menu-button">
@@ -18,7 +18,7 @@
         </div>
 
         <div class="pageColumnMid" style="text-align: left;">
-            <br/><h:outputText style="font-size: 20px; color: black;" value="Ministerio de Educación"/>
+            <br/><p:outputLabel style="font-size: 20px; color: black;" value="Ministerio de Educación, Ciencia y Técnologia"/>
             <br/><h:outputText style="font-size: 18px; color: black;" value="Sistema de Paquetes Escolares"/>
         </div>
 
