--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/notasactas/rptActaAdjudicacionBean.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/notasactas/rptActaAdjudicacionBean.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptActaAdjudicacion" pageWidth="612" pageHeight="792" columnWidth="510" leftMargin="51" rightMargin="51" topMargin="39" bottomMargin="39" uuid="5c182a18-36cf-4e0e-8665-ae9cf4fee0a2">
 	<property name="ireport.zoom" value="2.1435888100000016"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="662"/>
+	<property name="ireport.y" value="0"/>
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<import value="net.sf.jasperreports.engine.*"/>
@@ -53,7 +53,7 @@
 		<groupHeader>
 			<band height="232" splitType="Stretch">
 				<textField isBlankWhenNull="false">
-					<reportElement key="textField-1" x="0" y="69" width="510" height="117" uuid="78abe481-3dc2-406c-9204-85f74ae2c73c"/>
+					<reportElement uuid="78abe481-3dc2-406c-9204-85f74ae2c73c" key="textField-1" x="0" y="69" width="510" height="117"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -75,7 +75,7 @@ concat("\nb) El día ").concat(Herramientas.getNumDia($F{fechaApertura})).concat
 concat($F{horaRegistro}+" horas y "+$F{minutoRegistro}).concat(" minutos, se recibieron las siguientes cotizaciones:")]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement key="staticText-5" x="102" y="11" width="308" height="35" uuid="46370436-e175-4edc-9bab-5d4c3b7aa79d"/>
+					<reportElement uuid="46370436-e175-4edc-9bab-5d4c3b7aa79d" key="staticText-5" x="102" y="11" width="308" height="35"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -88,7 +88,7 @@ concat($F{horaRegistro}+" horas y "+$F{minutoRegistro}).concat(" minutos, se rec
 					<text><![CDATA[ACTA DE ADJUDICACION]]></text>
 				</staticText>
 				<image>
-					<reportElement key="image-1" x="0" y="0" width="60" height="60" uuid="52803ae5-0980-473f-8aa7-36cce9978717"/>
+					<reportElement uuid="52803ae5-0980-473f-8aa7-36cce9978717" key="image-1" x="0" y="0" width="60" height="60"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -98,7 +98,7 @@ concat($F{horaRegistro}+" horas y "+$F{minutoRegistro}).concat(" minutos, se rec
 					<imageExpression><![CDATA[$P{ubicacionImagenes}+"escudo.jpg"]]></imageExpression>
 				</image>
 				<image>
-					<reportElement key="image-2" x="445" y="4" width="65" height="51" uuid="1c9be329-7a4f-4f11-a6c8-ac114ed60f50"/>
+					<reportElement uuid="1c9be329-7a4f-4f11-a6c8-ac114ed60f50" key="image-2" x="420" y="0" width="90" height="57"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -108,7 +108,7 @@ concat($F{horaRegistro}+" horas y "+$F{minutoRegistro}).concat(" minutos, se rec
 					<imageExpression><![CDATA[$P{ubicacionImagenes} + "logo_mined_rpt.png"]]></imageExpression>
 				</image>
 				<subreport isUsingCache="true">
-					<reportElement key="subreport-3" x="0" y="187" width="510" height="45" uuid="5f0cc12a-2678-4118-b81b-6121bfeb2ba4"/>
+					<reportElement uuid="5f0cc12a-2678-4118-b81b-6121bfeb2ba4" key="subreport-3" x="0" y="187" width="510" height="45"/>
 					<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{lstParticipantes})]]></dataSourceExpression>
 					<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "subRptActaAdjudicacionProveedoresBean.jasper"]]></subreportExpression>
 				</subreport>
@@ -117,7 +117,7 @@ concat($F{horaRegistro}+" horas y "+$F{minutoRegistro}).concat(" minutos, se rec
 		<groupFooter>
 			<band height="95" splitType="Stretch">
 				<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-					<reportElement key="textField-9" x="0" y="0" width="510" height="50" uuid="c6a948d1-e195-44ac-844b-386dca6221cc"/>
+					<reportElement uuid="c6a948d1-e195-44ac-844b-386dca6221cc" key="textField-9" x="0" y="0" width="510" height="50"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -148,7 +148,7 @@ concat($F{horaRegistro}+" horas y "+$F{minutoRegistro}).concat(" minutos, se rec
 	<detail>
 		<band height="73" splitType="Stretch">
 			<subreport isUsingCache="true">
-				<reportElement key="subreport-2" x="0" y="3" width="510" height="67" uuid="89cb331d-3835-4dfd-a941-932e386c5911"/>
+				<reportElement uuid="89cb331d-3835-4dfd-a941-932e386c5911" key="subreport-2" x="0" y="3" width="510" height="67"/>
 				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{lstDetalleItem})]]></dataSourceExpression>
 				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "subRptActaItemsBean.jasper"]]></subreportExpression>
 			</subreport>
@@ -160,7 +160,7 @@ concat($F{horaRegistro}+" horas y "+$F{minutoRegistro}).concat(" minutos, se rec
 	<pageFooter>
 		<band height="15" splitType="Stretch">
 			<textField>
-				<reportElement x="0" y="0" width="313" height="15" uuid="67c4570e-1491-4010-9d91-8b5599c064d9"/>
+				<reportElement uuid="67c4570e-1491-4010-9d91-8b5599c064d9" x="0" y="0" width="313" height="15"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="6"/>
 				</textElement>
