--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/notasactas/rptActaAdjudicacionBean2018.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/notasactas/rptActaAdjudicacionBean2018.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptActaAdjudicacion" pageWidth="612" pageHeight="792" columnWidth="510" leftMargin="51" rightMargin="51" topMargin="39" bottomMargin="39" uuid="244b56df-7b1c-4fca-9e9d-dde2f9b172eb">
 	<property name="ireport.zoom" value="1.9965000000000006"/>
-	<property name="ireport.x" value="483"/>
-	<property name="ireport.y" value="767"/>
+	<property name="ireport.x" value="247"/>
+	<property name="ireport.y" value="686"/>
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<import value="net.sf.jasperreports.engine.*"/>
@@ -74,19 +74,14 @@ concat("de Libre Gestión y dar la recomendación de adjudicación respectiva.")
 concat("\n\nETAPAS DEL PROCESO:\n\n").
 concat("a) Las solicitudes de cotizaciones se entregaron en fecha ").concat($F{fechaApertura}+" a:")]]></textFieldExpression>
 				</textField>
-				<staticText>
-					<reportElement uuid="1d0617c7-9e09-41e0-ac04-856078b2be79" key="staticText-5" x="102" y="11" width="308" height="35"/>
-					<box>
-						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<bottomPen lineWidth="0.0" lineColor="#000000"/>
-						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					</box>
-					<textElement textAlignment="Center" verticalAlignment="Middle">
+				<textField>
+					<reportElement uuid="5843cd26-1ae0-4edd-ac6d-bac74c0c756d" key="staticText-5" x="102" y="11" width="308" height="35"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle" markup="none">
 						<font fontName="Arial" size="12"/>
 					</textElement>
-					<text><![CDATA[ACTA DE ADJUDICACION]]></text>
-				</staticText>
+					<textFieldExpression><![CDATA["ACTA DE ADJUDICACION\n"+
+"\""+$F{descripcionRubro}+"\""]]></textFieldExpression>
+				</textField>
 				<image>
 					<reportElement uuid="d662ed9c-377b-4d74-87d4-2293e65456b4" key="image-1" x="0" y="0" width="60" height="60"/>
 					<box>
@@ -98,7 +93,7 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha ").concat($F{f
 					<imageExpression><![CDATA[$P{ubicacionImagenes}+"escudo.jpg"]]></imageExpression>
 				</image>
 				<image>
-					<reportElement uuid="a3a21642-5656-4bc8-9f47-63ca6738e700" key="image-2" x="445" y="4" width="65" height="51"/>
+					<reportElement uuid="a3a21642-5656-4bc8-9f47-63ca6738e700" key="image-2" x="420" y="0" width="90" height="57"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -115,7 +110,7 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha ").concat($F{f
 			</band>
 		</groupHeader>
 		<groupFooter>
-			<band height="180" splitType="Stretch">
+			<band height="198" splitType="Stretch">
 				<textField isStretchWithOverflow="true" isBlankWhenNull="false">
 					<reportElement uuid="919a6134-db0d-4f42-b5bb-18e8d50d805f" key="textField-9" x="0" y="0" width="510" height="74"/>
 					<box>
@@ -211,6 +206,19 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha ").concat($F{f
 					</textElement>
 					<text><![CDATA[Encargado(a) de Compra del organismo]]></text>
 				</staticText>
+				<staticText>
+					<reportElement uuid="2347e2ab-ea28-4cf5-b364-7b1029c59552" key="staticText-1" x="240" y="184" width="217" height="13"/>
+					<box>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<textElement>
+						<font fontName="Arial" size="8"/>
+					</textElement>
+					<text><![CDATA[Nombre:  _______________________________________]]></text>
+				</staticText>
 			</band>
 		</groupFooter>
 	</group>
@@ -239,9 +247,9 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha ").concat($F{f
 		<band splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="15" splitType="Stretch">
+		<band height="12" splitType="Stretch">
 			<textField pattern="" isBlankWhenNull="false">
-				<reportElement uuid="894642a5-1048-41ab-b2b3-950c51cb091a" key="textField-10" x="0" y="0" width="328" height="15"/>
+				<reportElement uuid="894642a5-1048-41ab-b2b3-950c51cb091a" key="textField-10" x="0" y="0" width="328" height="12"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
