--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagares/rptPagareCumplimientoContrato.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagares/rptPagareCumplimientoContrato.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptPagareCumplimientoContrato" pageWidth="612" pageHeight="792" columnWidth="510" leftMargin="51" rightMargin="51" topMargin="39" bottomMargin="39">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptPagareCumplimientoContrato" pageWidth="612" pageHeight="792" columnWidth="510" leftMargin="51" rightMargin="51" topMargin="39" bottomMargin="39" uuid="b056c785-7341-4679-991f-a3e0709d120f">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<property name="ireport.zoom" value="1.0"/>
@@ -68,7 +68,7 @@
 		<groupHeader>
 			<band height="110" splitType="Stretch">
 				<image>
-					<reportElement key="image-1" x="0" y="0" width="60" height="60"/>
+					<reportElement uuid="bc0970e9-d318-45a7-95f8-349b8843f312" key="image-1" x="0" y="0" width="60" height="60"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -78,7 +78,7 @@
 					<imageExpression><![CDATA[$P{ubicacionImagenes} + File.separator + "escudo.jpg"]]></imageExpression>
 				</image>
 				<image>
-					<reportElement key="image-2" x="444" y="6" width="65" height="51"/>
+					<reportElement uuid="241961a9-7656-4bda-a464-54e8da7da7d7" key="image-2" x="420" y="0" width="90" height="57"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -88,7 +88,7 @@
 					<imageExpression><![CDATA[$P{ubicacionImagenes} + File.separator + "logo_mined_rpt.png"]]></imageExpression>
 				</image>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-					<reportElement key="textField-2" x="0" y="71" width="510" height="39"/>
+					<reportElement uuid="cb77b90f-3788-444f-be7b-733ced5dea19" key="textField-2" x="0" y="71" width="510" height="39"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -116,7 +116,7 @@ concat("asimismo faculto al Organismo de Administración Escolar que administra 
 concat("que se embarguen, a quien relevo de la obligación de rendir fianza.")]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="false">
-					<reportElement key="textField-6" x="78" y="15" width="352" height="35"/>
+					<reportElement uuid="cfe79f10-bdff-41f4-af04-5b9a3b0881cd" key="textField-6" x="78" y="15" width="342" height="56"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -133,7 +133,7 @@ concat("que se embarguen, a quien relevo de la obligación de rendir fianza.")]]
 		<groupFooter>
 			<band height="162" splitType="Stretch">
 				<staticText>
-					<reportElement key="staticText-1" x="1" y="44" width="119" height="13"/>
+					<reportElement uuid="14cb7118-f54a-4ee8-9951-e118f0f8003e" key="staticText-1" x="1" y="44" width="119" height="13"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -146,7 +146,7 @@ concat("que se embarguen, a quien relevo de la obligación de rendir fianza.")]]
 					<text><![CDATA[Firma del Proveedor(a):]]></text>
 				</staticText>
 				<textField isBlankWhenNull="false">
-					<reportElement key="textField-3" x="24" y="61" width="485" height="14"/>
+					<reportElement uuid="24aca5f4-75be-450b-b57c-1ea979120ba8" key="textField-3" x="24" y="61" width="485" height="14"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -159,10 +159,10 @@ concat("que se embarguen, a quien relevo de la obligación de rendir fianza.")]]
 					<textFieldExpression><![CDATA["Nombre: "+$F{nombreRepresentante}]]></textFieldExpression>
 				</textField>
 				<line>
-					<reportElement key="line-1" x="111" y="57" width="168" height="1"/>
+					<reportElement uuid="b01713d4-bc38-460d-b47d-6869b734d1ec" key="line-1" x="111" y="57" width="168" height="1"/>
 				</line>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-					<reportElement key="textField-4" x="24" y="75" width="486" height="53"/>
+					<reportElement uuid="563c91e6-7269-485b-992d-140d7b2a8855" key="textField-4" x="24" y="75" width="486" height="53"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -176,7 +176,7 @@ concat("que se embarguen, a quien relevo de la obligación de rendir fianza.")]]
 concat("\nNo. DUI o PASAPORTE: ").concat($F{numeroDui}).concat("\nNo. De NIT: ").concat($F{numeroNit})]]></textFieldExpression>
 				</textField>
 				<textField pattern="" isBlankWhenNull="false">
-					<reportElement key="textField-7" x="3" y="151" width="176" height="11"/>
+					<reportElement uuid="06842597-f652-4b4c-a73c-0a8e8431f070" key="textField-7" x="3" y="151" width="176" height="11"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
