--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptMatrizPago.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptMatrizPago.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="1008" pageHeight="612" orientation="Landscape" columnWidth="968" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="2c64dcb9-cec2-425a-8efd-5083d3230eb2">
 	<property name="ireport.zoom" value="1.3995221406292007"/>
-	<property name="ireport.x" value="421"/>
-	<property name="ireport.y" value="185"/>
+	<property name="ireport.x" value="72"/>
+	<property name="ireport.y" value="0"/>
 	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
@@ -243,7 +243,7 @@ WHERE
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="8"/>
 				</textElement>
-				<text><![CDATA[BANCO PAGADURIA:]]></text>
+				<text><![CDATA[BANCO PAGADURÍA:]]></text>
 			</staticText>
 			<textField>
 				<reportElement uuid="65c07728-3ead-4f0d-a182-11b8aff92a6a" x="105" y="122" width="132" height="12"/>
@@ -271,9 +271,9 @@ WHERE
 				<textElement textAlignment="Center" verticalAlignment="Middle" markup="none">
 					<font fontName="Arial" size="10"/>
 				</textElement>
-				<textFieldExpression><![CDATA["MINISTERIO DE EDUCACION\n"+
-"DIRECCION DEPARTAMENTAL DE EDUCACION DE "  + $P{pDepartamento} + "\n"+ 
-"PAGADURIA AUXILIAR DEPARTAMENTAL\n"+
+				<textFieldExpression><![CDATA["MINISTERIO DE EDUCACIÓN, CIENCIA Y TECNOLOGÍA\n"+
+"DIRECCIÓN DEPARTAMENTAL DE EDUCACIÓN DE "  + $P{pDepartamento} + "\n"+ 
+"PAGADURÍA AUXILIAR DEPARTAMENTAL\n"+
 "PLANILLA DE PAGO"]]></textFieldExpression>
 			</textField>
 		</band>
