--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptRequerimientoFondos.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptRequerimientoFondos.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="667ad911-1d32-4dc9-b4f6-f3676bdbab2f">
 	<property name="ireport.zoom" value="2.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="175"/>
+	<property name="ireport.y" value="51"/>
 	<parameter name="pDepartamental" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA["SAN MIGUEL"]]></defaultValueExpression>
 	</parameter>
@@ -81,17 +81,17 @@ ORDER BY DET.CODIGO_ENTIDAD]]>
 	<pageHeader>
 		<band height="132" splitType="Stretch">
 			<textField>
-				<reportElement uuid="8b6881fa-9b39-4e73-ad7b-8136abdf7006" x="40" y="0" width="496" height="38"/>
+				<reportElement uuid="8b6881fa-9b39-4e73-ad7b-8136abdf7006" x="40" y="0" width="496" height="44"/>
 				<textElement textAlignment="Center">
 					<font fontName="Arial" size="10" isBold="true"/>
 					<paragraph lineSpacing="Proportional" lineSpacingSize="1.3"/>
 				</textElement>
-				<textFieldExpression><![CDATA["MINISTERIO DE EDUCACION\n"+
-"DIRECCION DEPARTAMENTAL DE EDUCACION DE "+$P{pDepartamental}+"\n"+
-"PAGADURIA AUXILIAR DEPARTAMENTAL"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["MINISTERIO DE EDUCACIÓN, CIENCIA Y TECNOLOGÍA\n"+
+"DIRECCIÓN DEPARTAMENTAL DE EDUCACIÓN DE "+$P{pDepartamental}+"\n"+
+"PAGADURÍA AUXILIAR DEPARTAMENTAL"]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="47f6b448-aa5d-46d7-9cb6-593b23d762e9" x="40" y="38" width="496" height="15"/>
+				<reportElement uuid="47f6b448-aa5d-46d7-9cb6-593b23d762e9" x="40" y="44" width="496" height="15"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" size="10"/>
 				</textElement>
